...
          ) : (
            <>
              <Button
                danger
                style={{ alignSelf: 'center', marginBottom: 16 }}
                type="primary"
                shape="circle"
                icon={<DeleteOutlined />}
                disabled={deleteDisabled}
                onClick={() => {
                  if (onDeleteCurrentPicture) onDeleteCurrentPicture();
                }}
              />
...
