...
  ReviewRecommendationTagsType,
  VenueRequestStatus,
  WhiskeyType,
} from './graphQlTypes';

export const WhiskeyTypes: SelectProps['options'] = [
  { label: 'American', value: WhiskeyType.AMERICAN },
  { label: 'Bourbon', value: WhiskeyType.BOURBON },
  { label: 'Canadian', value: WhiskeyType.CANADIAN },
  { label: 'Flavored', value: WhiskeyType.FLAVORED },
  { label: 'Irish', value: WhiskeyType.IRISH },
  { label: 'Japanese', value: WhiskeyType.JAPANESE },
  { label: 'Rye', value: WhiskeyType.RYE },
  { label: 'Scotch', value: WhiskeyType.SCOTCH },
  { label: 'American Single Malt', value: WhiskeyType.SINGLE_MALT_AMERICAN },
  { label: 'Single Malt Scotch', value: WhiskeyType.SINGLE_MALT_SCOTCH },
  { label: 'Blended Scotch & WO', value: WhiskeyType.BLENDED_SCOTCH_AND_WO },
  { label: 'World', value: WhiskeyType.WORLD },
  { label: 'Tennessee Whiskey', value: WhiskeyType.TN_WHISKEY },
  { label: 'Malt', value: WhiskeyType.MALT },
  { label: 'Tequila', value: WhiskeyType.TEQUILA },
  { label: 'Tequila Reposado', value: WhiskeyType.TEQUILA_REPOSADO },
...
