...
                <RoundedDropdown
                  sortType={sortType}
                  setSortType={setSortType}
                />
                {userId === sub && (
                  <Link onPress={() => addToWishList()} color="primary500">
                    + Add
                  </Link>
                )}
              </DropDownSection>
            )}

            <HorizontalFlatList
...
                      </Text>
                      <Link
                        bold
                        onPress={() => addToWishList()}
                        color="primary500"
                      >
                        + Add a Whiskey
                      </Link>
                    </>
                  ) : (
                    <Text size={13} color="white" align="center">
                      {`${user?.personFirstName
                          ? user?.personFirstName
...
