...
            variant="outlineDefault"
            onPress={handleSave}
            loading={saving}
            disabled={loading || !url}
            full
          />
          <Button label="Done" variant="default" onPress={onClose} full />
        </SaveButtonContainer>
      </ModalContent>
    </ModalBottom>
  );
};

...
