...
  return (
    currentAd &&
    currentAd?.url && (
      <AdBody>
        {topDivider && <Divider />}
        <TouchableOpacity
          testID={getTestId('ads')}
          onPress={() => {
            const adUrl = currentAd?.url;
            if (!adUrl) return;

            track('clickAd', {
              userId: sub,
...
