...

  return (
    <>
      <TitleConteiner>
        <Icon name="specialist" size={28} color="primary500" />
        <Title mb={5} size={18}>
          Specialist's Choice of the week
        </Title>
      </TitleConteiner>
      <TouchableOpacity
        testID={getTestId('choice-of-the-week')}
        onPress={() => {
          if (choiceOfTheWeek?.id) {
            goToWhiskey(choiceOfTheWeek?.id);
          }
        }}
      >
...
