...
  }, [data, location]);
  

  return (
    <>
      <TitleContainer>
        <Title size={18}>Nearby Places</Title>
        <LinkContainer onPress={location ? seeOnMap : openLocationSettings}>
          <IconContainer>
            <Icon
              name={location ? 'map' : 'gear'}
              size={16}
              color="primary500"
            />
          </IconContainer>
          <Link color="primary500" testID={getTestId(location ? 'see-on-map' : 'location-settings')}>
            {location ? 'See on map' : 'Location settings'}
          </Link>
        </LinkContainer>
      </TitleContainer>

      {!location && (
...
