...
  };

  const setPageTitle = (fromWhere: any) => {
    if (fromWhere) {
      return fromWhere?.name === 'BottleDetails'
        ? 'Edit Bottle Details'
        : 'Bottle Details';
    }
    return 'Bottle Details';
  };

  const setButtonLabel = (fromWhere: any) => {
    if (fromWhere) {
...
