...
                      message="Touch and hold over your comment if you want to delete it."
                      onClose={() => setHasSeenHints(true)}
                    />
                  )}

                  <PostComment
                    comment={item}
                    onClose={backButtonExit}
                    onLongPressComment={() => setHasSeenHints(true)}
                  />
                </>
              )}
              keyExtractor={(item: Comment) => item.id}
...

            <PublishRow>
              <PublishButton disabled={!canPublish} onPress={onSubmit}>
                {isPublishing && <ActivityIndicator />}
                {!isPublishing && (
                  <Text bold color={canPublish ? 'primary500' : 'grey300'}>
                    Publish
                  </Text>
                )}
              </PublishButton>
            </PublishRow>
          </NewCommentContainer>
        ) : (
...
