...
    setCurrentLikesCount(likesCount || 0);
  }, [likesCount]);

  return (
    <TouchableOpacity
      onPress={() => guardGuest(handleLike)}
      testID={likeState ? 'disliked' : 'liked'}
      disabled={!canLike}
    >
      <View style={{ flexDirection: 'row', alignItems: 'center', gap: 5 }}>
        <Icon name="heart" color={likeState ? 'red' : 'white'} size={25} />
        {currentLikesCount > 0 && (
          <Text size={14} color="white">
...
