...
        <RewardImageContainer>
          <RewardImage source={RewardIcon} />
        </RewardImageContainer>

        <TitleContainer>
          <Title size={27} align="center">
            Congratulations
          </Title>
        </TitleContainer>

        <SubtitleContainer>
          <Text mv={4} align="center" size={12}>
            You've just completed a challenge!Now, go claim your prize.
...
