...
      </Title>
    </ResponsiveRow>

    {myUser?.userType !== UserType.BRAND && postsLength > 0 && (
      <FormattedTagFilter
        formattedTags={[
          { value: 'check-in', name: 'venue' },
          { value: 'drinking', name: 'drinking' },
        ]}
        selectedTags={activitiesTags}
        setSelectedTags={setActivitiesTags}
      />
    )}
...
